2011-07-20  Tim Horton  <timothy_horton@apple.com>

        Reviewed by Darin Adler.

        Errors encountered within SVG documents should be reported to the console
        https://bugs.webkit.org/show_bug.cgi?id=62599
        <rdar://problem/9727074>

        Add SVGLength::construct, which can be used to construct an SVGLength
        as normal, but returns an SVGParsingError via a reference argument.
        The function also takes another argument, which is whether or not
        the SVGLength value is allowed to be negative. If not, an error is
        thrown. It defaults to allowing negatives if not specified.

        * GNUmakefile.list.am:
        * svg/SVGLength.cpp:
        (WebCore::SVGLength::construct):
        (WebCore::SVGLength::rawValue):
        * svg/SVGLength.h:
        * svg/SVGElement.h:
        * svg/SVGParsingError.h: Added.
        * WebCore.gypi:
        * WebCore.pro:
        * WebCore.vcproj/WebCore.vcproj:
        * WebCore.xcodeproj/project.pbxproj:

2011-07-20  Levi Weintraub  <leviw@chromium.org>

        Switch getTransformFromContainer and its uses to new layout types
        https://bugs.webkit.org/show_bug.cgi?id=64908

        Reviewed by Simon Fraser.

        Switching getTransformFromContainer and its uses to use the new Layout
        Types from strictly integer ones.

        No new tests, no new functionality.

        * rendering/RenderBox.cpp:
        (WebCore::RenderBox::mapLocalToContainer):
        * rendering/RenderInline.cpp:
        (WebCore::RenderInline::mapLocalToContainer):
        * rendering/RenderLayer.cpp:
        (WebCore::RenderLayer::createLocalTransformState):
        * rendering/RenderObject.cpp:
        (WebCore::RenderObject::getTransformFromContainer):
        * rendering/RenderObject.h:
        * rendering/RenderView.cpp:
        (WebCore::RenderView::mapLocalToContainer):
        (WebCore::RenderView::mapAbsoluteToLocalPoint):

2011-07-20  Tim Horton  <timothy_horton@apple.com>
