@@ -1,3 +1,10 @@
+2011-07-20  Ryosuke Niwa  <rniwa@webkit.org>
+
+        Build fix after r91435.
+
+        * platform/mac/ScrollViewMac.mm:
+        (WebCore::ScrollView::platformSetScrollbarOverlayStyle):
+
 2011-07-20  Tim Horton  <timothy_horton@apple.com>
 
         Reviewed by Darin Adler.
